# stemgen-rt

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: cmake.yml
model/: model.onnx  model.onnx.data
plugin/: CMakeLists.txt
plugin/include/StemgenRT/: BuildConfig.h  Constants.h  Crossover.h  InferenceQueue.h  InputNormalizer.h  LowBandStabilizer.h  OnnxRuntime.h  OutputWriter.h  OverlapAddProcessor.h  PluginEditor.h  PluginProcessor.h  ResidualProcessor.h  SoftGate.h  StemPostProcessor.h  VocalsGate.h
plugin/source/: Crossover.cpp  InferenceQueue.cpp  InputNormalizer.cpp  LowBandStabilizer.cpp  OnnxRuntime.cpp  OutputWriter.cpp  OverlapAddProcessor.cpp  PluginEditor.cpp  PluginProcessor.cpp  ResidualProcessor.cpp  StemPostProcessor.cpp  VocalsGate.cpp
scripts/: download-onnxruntime.ps1  download-onnxruntime.sh  install-plugins.ps1  install-plugins.sh
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp  OrtRunBenchmarkTest.cpp  OverlapAddProcessorTest.cpp  RealtimeStemSanityTest.cpp
